# rammap

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
docs/: architecture.md  extensibility.md  minimap2-ksw-ll-ub.md  performance.md
examples/: simple_align.rs
rammap/: Cargo.toml
rammap-core/src/: api.rs  lib.rs
rammap-core/src/align/: index.rs  seed.rs
rammap-core/src/align/dp/: common.rs  mod.rs
rammap-core/src/fasta/: reader.rs
rammap/src/: main.rs
src/: api.rs  lib.rs  main.rs
src/align/: align_simple.rs  chain.rs  chain_rmq.rs  chain_simd.rs  dp.rs  env_flags.rs  extend.rs  filter.rs  index.rs  index_bucket.rs  junc.rs  map.rs  mod.rs  pipeline.rs  seed.rs  sort.rs  split.rs  wasm_lib.rs
src/align/dp/: dual.rs  lw.rs  mod.rs  single.rs  splice.rs
src/fasta/: mod.rs  reader.rs
web/: index.html  worker.js
